style/form-standalone.scss
/*--------------------------------------------------------------
# Functions and vars
--------------------------------------------------------------*/
@import "variables-site/variables-site";
@import "mixins/mixins-master";

/*--------------------------------------------------------------
# Normalize
--------------------------------------------------------------*/
@import "normalize";

/*--------------------------------------------------------------
# Typography
--------------------------------------------------------------*/
@import "typography/typography";

/*--------------------------------------------------------------
# Accessibility
--------------------------------------------------------------*/
@import "modules/accessibility";

/*--------------------------------------------------------------
# Elements
--------------------------------------------------------------*/
@import "elements/elements";

/*--------------------------------------------------------------
# Forms
--------------------------------------------------------------*/
@import "forms/buttons";
@import "forms/fields";

body {
	background: rgba(255,255,255,0);
}

.inputs-list {
	padding: 0;

	li {

		&:before {
			display: none;
		}
	}
}

.hs-form-required,
.hs-error-msgs li {
	color: $color__error;
}

.hs-error-msgs {
	margin: 0;

	li label {
		font-weight: normal;
		padding: 0;
	}
}

.legal-consent-container ~ .hs_recaptcha {
	margin-bottom: 15px;
}

.legal-consent-container {
	@include font-size(.7);
	margin: 18px 0;
	line-height: 1.3em;

	p, .inputs-list {
		margin: 15px 0;
	}

	label {
		@include font-size(.75);
	}
}

.wp-block-hubspot-form {

	.hs-form-iframe {
		height: auto !important;
	}

	form {
		margin: 0;
	}

	a {
		color: $color__link;
	}

	input[type="text"],
	input[type="email"],
	input[type="url"],
	input[type="password"],
	input[type="search"],
	input[type="number"],
	input[type="tel"],
	input[type="range"],
	input[type="date"],
	input[type="month"],
	input[type="week"],
	input[type="time"],
	input[type="datetime"],
	input[type="datetime-local"],
	input[type="color"],
	textarea,
	select {
		background: #fff;
		max-width: none;
		border: 1px solid $color__border-input;
		width: 100% !important;

		&:focus {
			border: 1px solid $color__corporate;
		}
	}

	.hs-submit {
		margin-top: 15px;
		
		input {
			border-color: $color__corporate;
		}
	}

	.form-columns-1 .hs-form-field .input {
		margin-right: 0;
	}

	fieldset.form-columns-2 {

		.hs-form-field {
			width: 100%;
		}

		.input {
			margin-right: 0;
		}

		@media screen and (min-width: 440px) {

			.hs-form-field {
				width: 49% !important;

				&:first-of-type {
					margin-right: 2%;
				}
			}
		}
	}

	label {
		color: $color__text-main;
		margin-bottom: 0;
		padding-top: 0;
	}

	textarea {
		min-height: 100px;
	}

	input[type="radio"].hs-input {
		border: 2px solid #fff;
		box-shadow: 0 0 0 2px $color__corporate;
		height: 1em !important;
		width: 1em !important;
		margin-left: 2px;

		&:checked {
			box-shadow: 0 0 0 2px $color__corporate;
		}
	}

	input[type="checkbox"] {
		border: 2px solid $color__corporate;
		height: 1.25em !important;
		width: 1.25em !important;
		border-radius: 3px;
	}

	.legal-consent-container {
		margin: 20px 0 10px;
		background: #f5f5f5;
		padding: 15px 15px 10px;
		border-radius: 8px;

		.hs-richtext,
		label {
			@include font-size(.7);
			line-height: 1.3em;
		}

		.inputs-list {
			margin: 0;
			padding: 0;

			li {
				margin: 0;
			}
		}
	}

	.field {
		margin-bottom: 10px;
	}

	.hs-error-msgs {
		margin-top: 3px;

		label {
			color: $color__error;
		}
	}

	.actions {
		margin: 0;
		padding: 0;
	}

	.hubspot-link__container {
		display: none;
	}

	&.is-style-dark {

		.legal-consent-container {
			background: rgba(0,0,0,.08);
		}

		.hs-error-msgs label {
			color: $color__corporate;
		}

		label,
		.hs-richtext,
		a {
			color: #fff;
		}

		input[type="checkbox"] {
			border-color: #aaa;
		}

		input[type="radio"] {
			box-shadow: 0 0 0 2px #aaa;
		}
	}
}

